fix font overflow

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,6 @@
 // bower:scss
 @import "font-awesome/scss/font-awesome.scss";
+
 // endbower
 //define variables here
 $nav-height: 7;
@@ -210,12 +211,12 @@ md-input-container .md-input {
   bottom: 0;
   left: 0;
   overflow: hidden;
-  z-index:0; //under the text
+  z-index: 0; //under the text
 }
 #video-overlay {
   position: relative;
-  display:block;
-  z-index:1; //over the video
+  display: block;
+  z-index: 1; //over the video
   margin-top: 35vh;
 }
 #video-content {
@@ -223,8 +224,9 @@ md-input-container .md-input {
   color: #fff;
 }
 #loading-bar {
-  z-index:1;
+  z-index: 1;
 }
+
 //ANIMATIONS
 .bounceInUp {
   -webkit-animation: bounceInUp 1s;
@@ -246,6 +248,13 @@ md-input-container .md-input {
   -webkit-animation: slideInUp 1s;
 }
 @media screen and (max-width: 768px) {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    font-size: 23px;
+  }
   .fullwidth {
     margin-bottom: 0;
   }
